tests/typing/fail/intersection_method_fail4.rb

class B
  def foo()
  end
end

class A

  def minus()
  end

  ##% plus: (Fixnum, Fixnum) -> B
  ##% plus: (Float, Float) -> Float
  def plus(x,y)
    #x + y
  end
end

a = A.new

z = a.plus(3)
